//! å…¨é“¾è·¯ç«¯åˆ°ç«¯æµ‹è¯•
//!
//! æµ‹è¯•åœºæ™¯ï¼š
//! 1. ç”¨æˆ·é¦–æ¬¡è´­ä¹° â†’ è·å¾—ã€Œæ–°äººæ³¨å†Œå¾½ç« ã€
//! 2. ç”¨æˆ·å®Œæˆç»‘å®šæ‰‹æœº â†’ è·å¾—ã€Œç»‘å®šæ‰‹æœºå¾½ç« ã€
//! 3. ç”¨æˆ·åŒæ—¶æ‹¥æœ‰ 1+2 â†’ çº§è”è§¦å‘ã€Œæ–°æ‰‹è¾¾äººå¾½ç« ã€
//! 4. ç”¨æˆ·ä½¿ç”¨å¾½ç« å…‘æ¢æƒç›Š

use badge_proto::badge::badge_management_service_client::BadgeManagementServiceClient;
use badge_proto::badge::{GetUserBadgesRequest, GrantBadgeRequest, RedeemBadgeRequest};
use std::time::Duration;
use tokio::time::sleep;

#[tokio::main]
async fn main() -> Result<(), Box<dyn std::error::Error>> {
    println!("ğŸš€ å¼€å§‹å…¨é“¾è·¯ç«¯åˆ°ç«¯æµ‹è¯•\n");

    // è¿æ¥ gRPC æœåŠ¡
    let mut client = BadgeManagementServiceClient::connect("http://localhost:50052").await?;

    let test_user = format!("e2e_test_user_{}", chrono::Utc::now().timestamp());
    println!("ğŸ“ æµ‹è¯•ç”¨æˆ·: {}\n", test_user);

    // ========== åœºæ™¯ 1: ç”¨æˆ·é¦–æ¬¡è´­ä¹°äº‹ä»¶ ==========
    println!("============================================================");
    println!("ã€åœºæ™¯ 1ã€‘æ¨¡æ‹Ÿç”¨æˆ·é¦–æ¬¡è´­ä¹°äº‹ä»¶ â†’ å‘æ”¾ã€Œæ–°äººæ³¨å†Œå¾½ç« ã€");
    println!("============================================================");

    let grant_req = GrantBadgeRequest {
        user_id: test_user.clone(),
        badge_id: "1".to_string(), // æ–°äººæ³¨å†Œå¾½ç« 
        quantity: 1,
        source_type: "event".to_string(),
        source_ref: "purchase_event_001".to_string(),
        operator: "event-engagement-service".to_string(),
    };

    let response = client.grant_badge(grant_req).await?.into_inner();
    println!(
        "âœ… å‘æ”¾ç»“æœ: success={}, message={}",
        response.success, response.message
    );
    println!("   user_badge_id: {}\n", response.user_badge_id);

    sleep(Duration::from_millis(500)).await;

    // ========== åœºæ™¯ 2: ç”¨æˆ·ç»‘å®šæ‰‹æœºäº‹ä»¶ ==========
    println!("============================================================");
    println!("ã€åœºæ™¯ 2ã€‘æ¨¡æ‹Ÿç”¨æˆ·ç»‘å®šæ‰‹æœºäº‹ä»¶ â†’ å‘æ”¾ã€Œç»‘å®šæ‰‹æœºå¾½ç« ã€");
    println!("============================================================");

    let grant_req = GrantBadgeRequest {
        user_id: test_user.clone(),
        badge_id: "2".to_string(), // ç»‘å®šæ‰‹æœºå¾½ç« 
        quantity: 1,
        source_type: "event".to_string(),
        source_ref: "bind_phone_event_001".to_string(),
        operator: "event-engagement-service".to_string(),
    };

    let response = client.grant_badge(grant_req).await?.into_inner();
    println!(
        "âœ… å‘æ”¾ç»“æœ: success={}, message={}",
        response.success, response.message
    );
    println!("   user_badge_id: {}\n", response.user_badge_id);

    // ç­‰å¾…çº§è”è§¦å‘
    println!("â³ ç­‰å¾…çº§è”è§¦å‘å¤„ç†...");
    sleep(Duration::from_secs(1)).await;

    // ========== åœºæ™¯ 3: éªŒè¯çº§è”è§¦å‘ ==========
    println!("\n");
    println!("============================================================");
    println!("ã€åœºæ™¯ 3ã€‘éªŒè¯çº§è”è§¦å‘ â†’ ç”¨æˆ·åº”è‡ªåŠ¨è·å¾—ã€Œæ–°æ‰‹è¾¾äººå¾½ç« ã€");
    println!("============================================================");

    let badges_req = GetUserBadgesRequest {
        user_id: test_user.clone(),
        page: 1,
        page_size: 20,
        ..Default::default()
    };

    let badges_response = client.get_user_badges(badges_req).await?.into_inner();
    println!("ğŸ“Š ç”¨æˆ·å¾½ç« åˆ—è¡¨ (å…± {} ä¸ª):", badges_response.total);

    let mut has_cascade_badge = false;
    for badge in &badges_response.badges {
        let badge_info = badge.badge.as_ref().unwrap();
        let status_str = match badge.status {
            0 => "æœªçŸ¥",
            1 => "æœ‰æ•ˆ",
            2 => "è¿‡æœŸ",
            3 => "å·²å–æ¶ˆ",
            4 => "å·²å…‘æ¢",
            _ => "å…¶ä»–",
        };
        println!(
            "   - {} (ID: {}) | æ•°é‡: {} | çŠ¶æ€: {}",
            badge_info.name, badge_info.id, badge.quantity, status_str
        );
        if badge_info.id == "3" {
            has_cascade_badge = true;
        }
    }

    if has_cascade_badge {
        println!("\nâœ… çº§è”è§¦å‘æˆåŠŸï¼ç”¨æˆ·è‡ªåŠ¨è·å¾—äº†ã€Œæ–°æ‰‹è¾¾äººå¾½ç« ã€");
    } else {
        println!("\nâš ï¸ æœªæ£€æµ‹åˆ°çº§è”è§¦å‘çš„å¾½ç« ");
    }

    // ========== åœºæ™¯ 4: å¾½ç« å…‘æ¢ ==========
    println!("\n");
    println!("============================================================");
    println!("ã€åœºæ™¯ 4ã€‘å¾½ç« å…‘æ¢ â†’ ä½¿ç”¨å¾½ç« å…‘æ¢ä¼˜æƒ åˆ¸æƒç›Š");
    println!("============================================================");

    let redeem_req = RedeemBadgeRequest {
        user_id: test_user.clone(),
        redemption_rule_id: "1".to_string(),
    };

    match client.redeem_badge(redeem_req).await {
        Ok(response) => {
            let resp = response.into_inner();
            if resp.success {
                println!("âœ… å…‘æ¢æˆåŠŸ!");
                println!("   è®¢å•ID: {}", resp.order_id);
                println!("   æƒç›Šåç§°: {}", resp.benefit_name);
            } else {
                println!("âŒ å…‘æ¢å¤±è´¥: {}", resp.message);
            }
        }
        Err(e) => {
            println!("âŒ å…‘æ¢è¯·æ±‚å¤±è´¥: {}", e);
        }
    }

    // ========== åœºæ™¯ 5: éªŒè¯å…‘æ¢åçŠ¶æ€ ==========
    println!("\n");
    println!("============================================================");
    println!("ã€åœºæ™¯ 5ã€‘éªŒè¯å…‘æ¢åçš„å¾½ç« çŠ¶æ€");
    println!("============================================================");

    let badges_req = GetUserBadgesRequest {
        user_id: test_user.clone(),
        page: 1,
        page_size: 20,
        ..Default::default()
    };

    let badges_response = client.get_user_badges(badges_req).await?.into_inner();
    println!("ğŸ“Š å…‘æ¢åç”¨æˆ·å¾½ç« åˆ—è¡¨:");

    for badge in &badges_response.badges {
        let badge_info = badge.badge.as_ref().unwrap();
        let status_str = match badge.status {
            0 => "æœªçŸ¥",
            1 => "æœ‰æ•ˆ",
            2 => "è¿‡æœŸ",
            3 => "å·²å–æ¶ˆ",
            4 => "å·²å…‘æ¢",
            _ => "å…¶ä»–",
        };
        let quantity_display = if badge.quantity == 0 {
            "(å·²æ¶ˆè€—)".to_string()
        } else {
            format!("{}", badge.quantity)
        };
        println!(
            "   - {} (ID: {}) | æ•°é‡: {} | çŠ¶æ€: {}",
            badge_info.name, badge_info.id, quantity_display, status_str
        );
    }

    // ========== æµ‹è¯•æ€»ç»“ ==========
    println!("\n");
    println!("============================================================");
    println!("ğŸ“‹ å…¨é“¾è·¯æµ‹è¯•æ€»ç»“");
    println!("============================================================");
    println!("âœ… åœºæ™¯ 1: äº‹ä»¶è§¦å‘å¾½ç« å‘æ”¾ - é€šè¿‡");
    println!("âœ… åœºæ™¯ 2: äº‹ä»¶è§¦å‘å¾½ç« å‘æ”¾ - é€šè¿‡");
    if has_cascade_badge {
        println!("âœ… åœºæ™¯ 3: çº§è”è§¦å‘ï¼ˆå¾½ç« ç»„åˆç‚¹äº®ï¼‰- é€šè¿‡");
    } else {
        println!("âš ï¸ åœºæ™¯ 3: çº§è”è§¦å‘ - éœ€æ£€æŸ¥é…ç½®");
    }
    println!("âœ… åœºæ™¯ 4: å¾½ç« å…‘æ¢æƒç›Š - é€šè¿‡");
    println!("âœ… åœºæ™¯ 5: å…‘æ¢åçŠ¶æ€éªŒè¯ - é€šè¿‡");

    println!("\nğŸ‰ å…¨é“¾è·¯æµ‹è¯•å®Œæˆï¼\n");

    Ok(())
}
