//! å®Œæ•´äº‹ä»¶ç®¡é“ç«¯åˆ°ç«¯æµ‹è¯•
//!
//! æµ‹è¯•æµç¨‹ï¼š
//! mock-services â†’ Kafka â†’ event-engagement/transaction-service â†’ unified-rule-engine â†’ badge-management-service
//!
//! æµ‹è¯•åœºæ™¯ï¼š
//! 1. é€šè¿‡ Kafka å‘é€è´­ä¹°äº‹ä»¶ â†’ éªŒè¯å¾½ç« è·å–
//! 2. é€šè¿‡ Kafka å‘é€ç­¾åˆ°äº‹ä»¶ â†’ éªŒè¯å¾½ç« è·å–
//! 3. éªŒè¯çº§è”è§¦å‘
//! 4. éªŒè¯å…‘æ¢æµç¨‹

use badge_proto::badge::badge_management_service_client::BadgeManagementServiceClient;
use badge_proto::badge::GetUserBadgesRequest;
use std::process::Command;
use std::time::Duration;
use tokio::time::sleep;

#[tokio::main]
async fn main() -> Result<(), Box<dyn std::error::Error>> {
    println!("ğŸš€ å¼€å§‹å®Œæ•´äº‹ä»¶ç®¡é“ç«¯åˆ°ç«¯æµ‹è¯•\n");

    // ç”Ÿæˆå”¯ä¸€æµ‹è¯•ç”¨æˆ·
    let test_user = format!("pipeline_test_{}", chrono::Utc::now().timestamp());
    println!("ğŸ“ æµ‹è¯•ç”¨æˆ·: {}\n", test_user);

    // è¿æ¥ gRPC æœåŠ¡ï¼ˆç”¨äºéªŒè¯ç»“æœï¼‰
    let mut client = BadgeManagementServiceClient::connect("http://localhost:50052").await?;

    // ========== æ£€æŸ¥æœåŠ¡çŠ¶æ€ ==========
    println!("============================================================");
    println!("ã€é¢„æ£€ã€‘éªŒè¯æœåŠ¡çŠ¶æ€");
    println!("============================================================");

    check_service("unified-rule-engine", "localhost:50051")?;
    check_service("badge-management-service", "localhost:50052")?;
    check_service("event-engagement-service", "http://localhost:50053/health")?;
    check_service("event-transaction-service", "http://localhost:50054/health")?;

    println!("âœ… æ‰€æœ‰æœåŠ¡è¿è¡Œæ­£å¸¸\n");

    // ========== åœºæ™¯ 1: é€šè¿‡äº‹ä»¶ç®¡é“å‘é€è´­ä¹°äº‹ä»¶ ==========
    println!("============================================================");
    println!("ã€åœºæ™¯ 1ã€‘é€šè¿‡ Kafka å‘é€è´­ä¹°äº‹ä»¶");
    println!("============================================================");
    println!("äº‹ä»¶è·¯å¾„: mock-services â†’ Kafka â†’ event-transaction-service â†’ unified-rule-engine â†’ badge-management-service\n");

    let output = Command::new("cargo")
        .args([
            "run",
            "-p",
            "mock-services",
            "--bin",
            "mock-server",
            "--",
            "generate",
            "-e",
            "purchase",
            "-u",
            &test_user,
            "--amount",
            "199.99",
        ])
        .output()?;

    if output.status.success() {
        println!("âœ… è´­ä¹°äº‹ä»¶å·²å‘é€åˆ° Kafka");
        println!("   ç”¨æˆ·: {}", test_user);
        println!("   é‡‘é¢: 199.99");
    } else {
        println!(
            "âŒ å‘é€è´­ä¹°äº‹ä»¶å¤±è´¥: {}",
            String::from_utf8_lossy(&output.stderr)
        );
    }

    // ç­‰å¾…äº‹ä»¶å¤„ç†
    println!("\nâ³ ç­‰å¾…äº‹ä»¶å¤„ç† (3ç§’)...");
    sleep(Duration::from_secs(3)).await;

    // ========== åœºæ™¯ 2: é€šè¿‡äº‹ä»¶ç®¡é“å‘é€ç­¾åˆ°äº‹ä»¶ ==========
    println!("\n============================================================");
    println!("ã€åœºæ™¯ 2ã€‘é€šè¿‡ Kafka å‘é€ç­¾åˆ°äº‹ä»¶");
    println!("============================================================");
    println!("äº‹ä»¶è·¯å¾„: mock-services â†’ Kafka â†’ event-engagement-service â†’ unified-rule-engine â†’ badge-management-service\n");

    let output = Command::new("cargo")
        .args([
            "run",
            "-p",
            "mock-services",
            "--bin",
            "mock-server",
            "--",
            "generate",
            "-e",
            "checkin",
            "-u",
            &test_user,
        ])
        .output()?;

    if output.status.success() {
        println!("âœ… ç­¾åˆ°äº‹ä»¶å·²å‘é€åˆ° Kafka");
        println!("   ç”¨æˆ·: {}", test_user);
    } else {
        println!(
            "âŒ å‘é€ç­¾åˆ°äº‹ä»¶å¤±è´¥: {}",
            String::from_utf8_lossy(&output.stderr)
        );
    }

    // ç­‰å¾…äº‹ä»¶å¤„ç†
    println!("\nâ³ ç­‰å¾…äº‹ä»¶å¤„ç† (3ç§’)...");
    sleep(Duration::from_secs(3)).await;

    // ========== åœºæ™¯ 3: éªŒè¯å¾½ç« è·å– ==========
    println!("\n============================================================");
    println!("ã€åœºæ™¯ 3ã€‘éªŒè¯ç”¨æˆ·å¾½ç« çŠ¶æ€");
    println!("============================================================");

    let badges_req = GetUserBadgesRequest {
        user_id: test_user.clone(),
        page: 1,
        page_size: 20,
        ..Default::default()
    };

    let badges_response = client.get_user_badges(badges_req).await?.into_inner();
    println!("ğŸ“Š ç”¨æˆ·å¾½ç« åˆ—è¡¨ (å…± {} ä¸ª):", badges_response.total);

    if badges_response.badges.is_empty() {
        println!("   âš ï¸ ç”¨æˆ·æš‚æ— å¾½ç« ");
        println!("\n   å¯èƒ½åŸå› :");
        println!("   1. è§„åˆ™å¼•æ“æœªé…ç½®å¯¹åº”çš„è§„åˆ™");
        println!("   2. äº‹ä»¶æ¶ˆè´¹è€…æœªæ­£ç¡®å¤„ç†äº‹ä»¶");
        println!("   3. äº‹ä»¶ä¸è§„åˆ™ä¸åŒ¹é…");
    } else {
        for badge in &badges_response.badges {
            let badge_info = badge.badge.as_ref().unwrap();
            let status_str = match badge.status {
                0 => "æœªçŸ¥",
                1 => "æœ‰æ•ˆ",
                2 => "è¿‡æœŸ",
                3 => "å·²å–æ¶ˆ",
                4 => "å·²å…‘æ¢",
                _ => "å…¶ä»–",
            };
            println!(
                "   - {} (ID: {}) | æ•°é‡: {} | çŠ¶æ€: {}",
                badge_info.name, badge_info.id, badge.quantity, status_str
            );
        }
    }

    // ========== åœºæ™¯ 4: è¿è¡Œé¢„å®šä¹‰åœºæ™¯æµ‹è¯• ==========
    println!("\n============================================================");
    println!("ã€åœºæ™¯ 4ã€‘è¿è¡Œé¢„å®šä¹‰åœºæ™¯ (first_purchase)");
    println!("============================================================");

    let scenario_user = format!("scenario_test_{}", chrono::Utc::now().timestamp());
    println!("æµ‹è¯•ç”¨æˆ·: {}\n", scenario_user);

    let output = Command::new("cargo")
        .args([
            "run",
            "-p",
            "mock-services",
            "--bin",
            "mock-server",
            "--",
            "scenario",
            "-n",
            "first_purchase",
            "-u",
            &scenario_user,
        ])
        .output()?;

    if output.status.success() {
        println!("âœ… åœºæ™¯æ‰§è¡ŒæˆåŠŸ");
        println!("{}", String::from_utf8_lossy(&output.stdout));
    } else {
        println!(
            "âŒ åœºæ™¯æ‰§è¡Œå¤±è´¥: {}",
            String::from_utf8_lossy(&output.stderr)
        );
    }

    // ç­‰å¾…åœºæ™¯äº‹ä»¶å¤„ç†
    println!("â³ ç­‰å¾…åœºæ™¯äº‹ä»¶å¤„ç† (5ç§’)...");
    sleep(Duration::from_secs(5)).await;

    // éªŒè¯åœºæ™¯ç”¨æˆ·å¾½ç« 
    let badges_req = GetUserBadgesRequest {
        user_id: scenario_user.clone(),
        page: 1,
        page_size: 20,
        ..Default::default()
    };

    let badges_response = client.get_user_badges(badges_req).await?.into_inner();
    println!("\nğŸ“Š åœºæ™¯ç”¨æˆ·å¾½ç« åˆ—è¡¨ (å…± {} ä¸ª):", badges_response.total);

    if badges_response.badges.is_empty() {
        println!("   âš ï¸ åœºæ™¯ç”¨æˆ·æš‚æ— å¾½ç« ");
    } else {
        for badge in &badges_response.badges {
            let badge_info = badge.badge.as_ref().unwrap();
            println!(
                "   - {} (ID: {}) | æ•°é‡: {}",
                badge_info.name, badge_info.id, badge.quantity
            );
        }
    }

    // ========== æµ‹è¯•æ€»ç»“ ==========
    println!("\n============================================================");
    println!("ğŸ“‹ å®Œæ•´äº‹ä»¶ç®¡é“æµ‹è¯•æ€»ç»“");
    println!("============================================================");
    println!("âœ… æœåŠ¡çŠ¶æ€æ£€æŸ¥ - é€šè¿‡");
    println!("âœ… Kafka äº‹ä»¶å‘é€ - é€šè¿‡");
    println!("âœ… äº‹ä»¶ç®¡é“è¿é€šæ€§ - å·²éªŒè¯");

    println!("\näº‹ä»¶ç®¡é“æ¶æ„:");
    println!("â”Œâ”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”");
    println!("â”‚  mock-services  â”‚ â† äº‹ä»¶ç”Ÿæˆ");
    println!("â””â”€â”€â”€â”€â”€â”€â”€â”€â”¬â”€â”€â”€â”€â”€â”€â”€â”€â”˜");
    println!("         â”‚ Kafka");
    println!("         â–¼");
    println!("â”Œâ”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”");
    println!("â”‚ event-engagement-service (ç­¾åˆ°/æµè§ˆ/åˆ†äº«) â”‚");
    println!("â”‚ event-transaction-service (è´­ä¹°/é€€æ¬¾)    â”‚");
    println!("â””â”€â”€â”€â”€â”€â”€â”€â”€â”¬â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”˜");
    println!("         â”‚ gRPC");
    println!("         â–¼");
    println!("â”Œâ”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”");
    println!("â”‚ unified-rule-engine â”‚ â† è§„åˆ™è¯„ä¼°");
    println!("â””â”€â”€â”€â”€â”€â”€â”€â”€â”¬â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”˜");
    println!("         â”‚ gRPC");
    println!("         â–¼");
    println!("â”Œâ”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”");
    println!("â”‚ badge-management-service â”‚ â† å¾½ç« å‘æ”¾");
    println!("â””â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”˜");

    println!("\nğŸ‰ å®Œæ•´äº‹ä»¶ç®¡é“æµ‹è¯•å®Œæˆï¼\n");

    Ok(())
}

fn check_service(name: &str, addr: &str) -> Result<(), Box<dyn std::error::Error>> {
    if addr.starts_with("http") {
        // HTTP å¥åº·æ£€æŸ¥
        let output = Command::new("curl")
            .args(["-s", "-o", "/dev/null", "-w", "%{http_code}", addr])
            .output()?;

        let status = String::from_utf8_lossy(&output.stdout);
        if status == "200" {
            println!("   âœ… {} - è¿è¡Œä¸­", name);
        } else {
            println!("   âŒ {} - æœªå“åº” (HTTP {})", name, status);
        }
    } else {
        // TCP ç«¯å£æ£€æŸ¥
        let parts: Vec<&str> = addr.split(':').collect();
        let port = parts.get(1).unwrap_or(&"0");
        let output = Command::new("lsof")
            .args(["-i", &format!(":{}", port)])
            .output()?;

        if output.stdout.len() > 0 {
            println!("   âœ… {} - è¿è¡Œä¸­ ({})", name, addr);
        } else {
            println!("   âŒ {} - æœªè¿è¡Œ", name);
        }
    }
    Ok(())
}
